Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96089

Multiply defined symbols found for QWindowsIntegration::~QWindowsIntegration(void)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.2.0, 6.2.1, 6.2, 6.3.0 Alpha
    • 6.2.0 Beta3
    • Multimedia, QPA: Windows
    • None
    • Windows 10
      Cmake 3.21
      Qt Creator 5.0.0
      VS2019
      Custom static build of Qt 6.2b3
    • Windows
    • 4e1851251d45756ab4bd30b02af92d9b8911b37c (qt/qtmultimedia/dev) 8b6c2d77d400827066d3df9c5906d811b265d66a (qt/qtmultimedia/6.2) a761267d9f251e985d1d1185dc3b74466da56880 (qt/qtmultimedia/6.2.0)

    Description

      When linking against a statically compiled version of Qt 6.2 Beta 3, the linker throws the following error:

      qwindowsd.lib(qwindowsintegration.cpp.obj):-1: error: LNK2005: "public: virtual __cdecl QWindowsIntegration::~QWindowsIntegration(void)" (??1QWindowsIntegration@@UEAA@XZ) already defined in Qt6Multimediad.lib(qwindowsintegration.cpp.obj)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            anrocha André De La Rocha (Inactive)
            sjpritchard Stephen Pritchard
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes