Rename QWindowsIntegration to avoid collision with a qtbase symbol

The QWindowsIntegration name is used by a class in the Windows QPA in
qtbase, resulting in a symbol collision and linker error when doing a
static build. Renaming it to QWindowsMediaIntegration.

Fixes: QTBUG-96089
Pick-to: 6.2.0 6.2
Change-Id: I786cce79fd8c618e93af71be64bc87ee18f8fbee
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
Reviewed-by: Doris Verria <doris.verria@qt.io>